[package]
name = "datetime-default"
version = "1.1.1"
edition = "2021"
authors = ["yassun4dev <yassun4dev@outlook.com>"]
repository = "https://github.com/yassun4dev/datetime-default.git"
description = "Provide NewType of Datetime that overrides the default value."
keywords = ["datetime", "default", "chrono", "now"]
license = "MIT"

[dependencies]
chrono = { version = "^0.4", features = ["clock"]}
schemars = { version = "^0.8", default-features = false, optional = true, features = ["chrono", "derive"] }

[dev-dependencies]
serde_json = "^1.0"

[features]
default = []
schemars = ["dep:schemars"]
